# HDRplus

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  _config.yml  index.md  milestone.md  proposal.md
include/hdrplus/: align.h  bayer_image.h  burst.h  finish.h  hdrplus_pipeline.h  merge.h  params.h  utility.h
src/: align.cpp  bayer_image.cpp  burst.cpp  finish.cpp  hdrplus.cpp  hdrplus_pipeline.cpp  merge.cpp  params.cpp
tests/: README.md  test_align.cpp  test_bayer_image.cpp  test_burst.cpp  test_utility.cpp
